feat: initial release of ClashAccess v1.0.0 🎉 - Introduces @RequireAccess annotation for role/permission-based access - Provides automatic metadata exposure for secured and public endpoints - Includes support for gateway access validation - Enables AuthorizedUser injection via request headers - Adds metadata endpoint configuration for application services - Supports role and permission exclusions - Includes developer hook: ClashAccessMetadataAware